:bug: update article name

--- a/blog/source/_posts/2020-04-异步网络爬虫(tr).md
+++ b/blog/source/_posts/2020-04-异步网络爬虫(tr).md
@@ -1,7 +1,7 @@
 ---
 title: 异步网络爬虫
 tags: [python,async,generator]
-category: [advance,网络,异步]
+category: [翻译,advance,网络,异步]
 date: 2020-04-07 10:03:52
 ---
 ## 异步网络爬虫
