:wrench: update git blog part 1

--- a/blog/source/_posts/2020-04-github搭建博客(一).md
+++ b/blog/source/_posts/2020-04-github搭建博客(一).md
@@ -7,12 +7,16 @@ date: 2020-04-07 18:03:30
 # 搭建 github 博客之旅 （Part 1）
 
 ## 简介
-这废话蛮多的简介，可以跳过！  
+
+
+<details>
+    <summary>这废话蛮多的简介，可以跳过！</summary>
+
 搭建博客其实还是有很好处的，比如随时记录自己的`idea`，记录学习过程，让别人了解你,etc...    
 搭建博客的方式有很多，但是必不可少的肯定是：
    - 服务器
    - 前端页面  
-   
+
 没有服务器，怎么办？我们有 `Github Pages`。  
 前端页面写起来太麻烦？ 我们有 `hexo or jekyll`。  
 部署麻烦？我们有 `travis` 自动部署。  
@@ -20,4 +24,107 @@ emm,好像看起来很简单？就是避坑总结？ 没人看怎么办？
 **当然没那么简单！**    
 我们再加点新东西，速度优化，自动化脚本，全部往上面加！话不多说，不要浪费自己的计数能力，就是冲！  
 综上，所以有了我们这个小系列文章，越看越精彩！
+</details>
 
+
+
+
+
+## Github Pages
+### 1. GithubPages 简介
+
+<details>
+<summary>Github Pages是...</summary>
+
+> GitHub Pages 是一项静态站点托管服务，它直接从 GitHub 上的仓库获取 HTML、CSS 和 JavaScript 文件，（可选）通过构建过程运行文件，然后发布网站。 您可以在 [GitHub Pages 示例集合](https://github.com/collections/github-pages-examples)中查看 GitHub Pages 站点的示例。  
+ 您可以在 GitHub 的 github.io 域或自己的自定义域上托管站点。 更多信息请参阅“对 GitHub Pages 使用自定义域”。
+
+通俗的说，就是你可以把一个仓库当作**一台服务器(静态)**，可以用 `github.io` 的域名来访问。  
+这就解决我们的服务器问题了！  
+
+`Github Pages` 有三类——项目、用户和组织。
+区别不大，主要是域名及发布分支的区别。
+我们教程使用的 `Github Pages` 是用户类，默认发布源只能为 `master`。（这里要注意哦，只能为 `master`，发布目录为根目录或者 `/docs`）
+So，我们开始吧。
+
+</details>
+
+### 2. 创建 `Github Pages`
+- a. 创建`Github Pages`仓库，名字为 `<username>.github.io`。 [详细教程](https://help.github.com/cn/github/working-with-github-pages/creating-a-github-pages-site)
+- b. 克隆创建的仓库 
+  `git clone https://github.com/username/username.github.io`
+- c. 创建页面文件并部署页面
+   ```bash
+   cd username.github.io  
+   echo "my first page in git hub" > index.html  # 创建 index.html 文件
+   # 开始部署
+   git add --all 
+   git commit -m "init first page"
+   git push -u origin master  # 推到 master 分支后相当于自动部署
+   ```
+   做完上述操作后，我们打开[你的站点页面(https://username.github.io)]()
+   就能看到我们的创建的网站～不过目前只有一句话。
+
+### 3. 总结
+`Github Pages`就相当于一个**独立站点**，从上面的操作步骤可以看出。展示内容与我们的仓库内容相关。尤其是 `index.html`。 
+那么，我们就有很多发挥空间了。
+编写静态博客太麻烦？
+上 `Hexo` ！
+
+
+## Hexo
+
+### 1. Hexo 简介
+
+<details>
+  <summary>Hexo是...</summary>
+  
+> `Hexo` 是一个快速、简洁且高效的**博客框架**。`Hexo` 使用 `Markdown`（或其他渲染引擎）解析文章，在几秒内，即可利用靓丽的主题生成静态网页。
+
+
+也就是说，我们不用从零开始编写静态网站，利用现有的博客生成器就可以了！
+而且 支持 `Markdown`！写文档必备。
+效果如何？马上来看。
+</details>
+
+### 2. 安装并生成博客
+   - a. 安装 `hexo`
+      	`npm install -g hexo-cli`
+   - b. 初始化 `Hexo` 博客
+    ```bash
+    hexo init docs # docs 为文件夹名称
+    cd docs
+    npm install  # 安装相关依赖
+    ```
+
+        新建完成后，我们可以看到目录如下：
+    ```
+    .
+    ├── _config.yml  # 配置文件
+    ├── package.json  # 安装依赖
+    ├── scaffolds  # 模版文件
+    ├── source  # 资源文件
+    |   ├── _drafts
+    |   └── _posts
+    └── themes  # 主题文件夹，根据不同主题生成不同的静态资源
+    ```
+
+   - c. 开始写博客
+    我们根据模板创建一片文章
+    `hexo new poster_name  # poster_name 为文章名字，当然都可以改`
+    可以看到，运行命令之后，我们在 `source/_posts` 下生成了一个叫 `<poster_name>.md` 的文件。
+    这就是我们的博客文件，我们用 `Markdown` 语法简单测试一下。写入以下内容：
+        
+    ````markdown
+    
+    ## 这是我的第一篇博客
+    > 引用能用吗？
+    
+    ```python
+    # 我是 python 代码
+    a = 1
+    print(a)
+    ```
+    
+    ````
+   - d. 生成静态站点并部署
