:article: update blog_1_introduction

--- a/blog/source/_posts/2020-04-github搭建博客(一).md
+++ b/blog/source/_posts/2020-04-github搭建博客(一).md
@@ -88,28 +88,30 @@ So，我们开始吧。
 </details>
 
 ### 2. 安装并生成博客
-   - a. 安装 `hexo`
-      	`npm install -g hexo-cli`
-   - b. 初始化 `Hexo` 博客
-    ```bash
-    hexo init docs # docs 为文件夹名称
-    cd docs
-    npm install  # 安装相关依赖
-    ```
+   - #### a. 安装 `hexo`      
+         npm install -g hexo-cli
+             
+     
+   - #### b. 初始化 `Hexo` 博客
+        ```bash
+        hexo init docs # docs 为文件夹名称
+        cd docs
+        npm install  # 安装相关依赖
+        ```
+    
+     新建完成后，我们可以看到目录如下：
+        ```
+        .
+        ├── _config.yml  # 配置文件
+        ├── package.json  # 安装依赖
+        ├── scaffolds  # 模版文件
+        ├── source  # 资源文件
+        |   ├── _drafts
+        |   └── _posts
+        └── themes  # 主题文件夹，根据不同主题生成不同的静态资源
+        ```
 
-        新建完成后，我们可以看到目录如下：
-    ```
-    .
-    ├── _config.yml  # 配置文件
-    ├── package.json  # 安装依赖
-    ├── scaffolds  # 模版文件
-    ├── source  # 资源文件
-    |   ├── _drafts
-    |   └── _posts
-    └── themes  # 主题文件夹，根据不同主题生成不同的静态资源
-    ```
-
-   - c. 开始写博客
+   - #### c. 开始写博客
     我们根据模板创建一片文章
     `hexo new poster_name  # poster_name 为文章名字，当然都可以改`
     可以看到，运行命令之后，我们在 `source/_posts` 下生成了一个叫 `<poster_name>.md` 的文件。
@@ -127,4 +129,4 @@ So，我们开始吧。
     ```
     
     ````
-   - d. 生成静态站点并部署
+   - #### d. 生成静态站点并部署
