:wrench: update git blog part 1

--- a/blog/source/_posts/2020-04-github搭建博客(一).md
+++ b/blog/source/_posts/2020-04-github搭建博客(一).md
@@ -129,4 +129,60 @@ So，我们开始吧。
     ```
     
     ````
-   - #### d. 生成静态站点并部署
+   - #### d. 实时博客效果
+    文章写好了。怎么看效果呢？  
+    我们运行 `hexo server` 即可。
+    ```bash
+    $ hexo server # or hexo s
+    INFO  Start processing
+    INFO  Hexo is running at http://localhost:4000 . Press Ctrl+C to stop.
+    ```
+    得到输出结果如上，打开 [http://localhost:4000](http://localhost:4000) 就能看到我们的页面了！
+    > 待补图
+    
+    > 我们更改一下我们的 `md` 文件，再刷新一下，就能**实时**看到效果。
+    
+   - #### e.生成静态站点并部署
+   博客预览ok，那么就可以准备生成静态站点文件了。
+   So，我们运行
+   ```bash
+hexo generate # or hexo g
+```
+    就能看到有一堆文件产生，都放在了我们的 `public` 文件夹下面。
+    最重要的 `index.html` 也在其中。
+    那么问题来了，因为 `index.html` **必须**在 `/ or /docs` 目录下面。
+    而现在我们的目录结构是 `/docs/public/index.html` 。这样直接推上去肯定是不行的，那么怎么办呢？
+    > 当然，解决办法有很多
+    例如：
+    > - 单开一个分支用来写，master 只用来部署，保留 public 文件夹内容。实现方式利用软连接即可，这样可以写一个分支，部署一个分支，做到分离。
+    > - 改变 git 根目录，改变仓库位置。
+    
+    这时候，就可以寄出我们的部署神器 `hexo-deployer-git`
+    首先安装它（记得切换一个分支， 比如 `writing` ， 专门用来写文章）：
+    ```
+    npm install hexo-deployer-git
+    ```
+    之后编辑一下 `_config.yml`， 在末尾加上：
+    ```
+    # Deployment
+    ## Docs: https://hexo.io/docs/deployment.html
+    deploy:
+      type: git
+      repo: git@github.com:username/username.github.io.git
+      branch: master
+    ```
+    之后运行
+    ```
+    hexo deploy # hexo d
+    # 或者 生成加部署 hexo g & d
+    ```
+    就能自动部署完成了！
+    一气呵成。
+
+那么第一篇就到这里(第一步踩坑完成)，之后我们会出第二篇，会加上一些小操作～来让我们写博客更简单！
+> 详细文档
+> [Github Pages 中文文档](https://help.github.com/cn/github/working-with-github-pages/about-github-pages)
+> [Hexo 中文文档](https://hexo.io/zh-cn/docs/)
+   
+    
+    
