:wrench: update git blog part 2 for 看板娘 永久链接

--- a/blog/source/_posts/2020-04-python向文本中插入文字.md
+++ b/blog/source/_posts/2020-04-python向文本中插入文字.md
@@ -1,7 +1,11 @@
 ---
 title: python向文本中插入文字
-tags: [python,file]
-category: [tips]
+tags:
+  - python
+  - file
+category:
+  - tips
+abbrlink: 1a1d0279
 date: 2020-04-07 09:55:34
 ---
 ## 使用python向文本中插入文字
