--- a/blog/source/_posts/2020-04-使用python客户端和服务器的功能测试实例.md
+++ b/blog/source/_posts/2020-04-使用python客户端和服务器的功能测试实例.md
@@ -1,7 +1,11 @@
 ---
 title: 使用python客户端和服务器的功能测试实例
-tags: [python,tests]
-category: [advance]
+tags:
+  - python
+  - tests
+category:
+  - advance
+abbrlink: d4f60c7b
 date: 2020-04-07 10:01:02
 ---
 
