chore: fix mermaid Grammar

--- a/src/data/blog/_posts/2025-06-Agent的“记忆宫殿”：六层记忆系统的工程化存储设计.md
+++ b/src/data/blog/_posts/2025-06-Agent的“记忆宫殿”：六层记忆系统的工程化存储设计.md
@@ -14,7 +14,15 @@ category:
 ---
 # Agent的“记忆宫殿”：六层记忆系统的工程化存储设计  
 ## 从认知模型到生产级架构的深度实践  
-
+```mermaid
+graph LR
+    A[开始] --> B[处理数据]
+    B --> C{判断条件}
+    C -->|是| D[执行操作A]
+    C -->|否| E[执行操作B]
+    D --> F[结束]
+    E --> F
+```
 **引言**  
 人类依靠短期记忆对话、长期记忆沉淀经验、肌肉记忆自动执行动作。LLM Agent同样需要分层记忆系统来实现连贯交互、个性化响应和复杂任务执行。本文将拆解Agent的六类核心记忆（短期/工作/情节/语义/长期/程序性），并深入探讨其**工程落地的存储架构设计**——如何为每类记忆选择合适的数据库、数据模型及运维策略，最终构建统一高效的记忆编排层。
 
@@ -88,8 +96,7 @@ redis_client.setex(
   "constraints": {"max_budget": 2000, "preferred_airline": "东方航空"}
 }
 ```
-
-
+```mermaid
 graph LR
     A[LLM推理引擎] --> B[工作记忆暂存区]
     B --> C{是否需要协作？}
@@ -98,6 +105,9 @@ graph LR
     D --> F[Kafka]
     F --> G[Flink状态计算]
     G --> H[结果返回工作区]
+
+```
+
 
 ### 设计要点：
 
@@ -144,14 +154,18 @@ CREATE TABLE episodic_memory (
 )
 ```
 
+```mermaid
 graph LR
     A[新事件] --> B[热存储]
     B -->|7天后| C[温存储]
     C -->|30天后| D[冷存储]
     D -->|季度汇总| E[摘要存储]
+```
+
 
 ## 4. 语义记忆：知识图谱+向量双引擎
 
+```mermaid
 graph LR
     A[结构化数据] --> B[RDF三元组存储]
     C[非结构化文档] --> D[向量索引]
@@ -161,8 +175,11 @@ graph LR
     F --> G[Rerank排序]
     G --> H[返回知识]
 
+```
+
 ### 本体定义示例：
-``turtle
+
+```turtle
 @prefix : <http://example.org/ontology#> .
 
 :巴黎 a :城市 ;
@@ -176,7 +193,8 @@ graph LR
     :语言 :法语 .
 ```
 #### 版本管理策略：
-``bash
+
+```bash
 # 知识快照管理
 git add knowledge_base.ttl
 git commit -m "2024-Q3知识快照"
@@ -213,6 +231,7 @@ scheduler.every().month.do(
 
 ## 6. 程序性记忆：版本化技能仓库
 ### CI/CD流水线设计：
+```mermaid
 graph LR
     A[开发者提交] --> B[Git仓库]
     B --> C[CI流水线]
@@ -222,6 +241,8 @@ graph LR
     F --> G[部署到生产]
     G --> H[MongoDB缓存]
     H --> I[Agent运行时]
+
+```
 
 ```python
 class SkillLoader:
@@ -298,12 +319,15 @@ class MemoryOrchestrator:
 ```
 
 ### 安全合规层设计：
+```mermaid
 graph TB
     A[请求] --> B[认证鉴权]
     B --> C[PII检测]
     C --> D[数据脱敏]
     D --> E[加密存储]
     E --> F[审计日志]
+```
+
 
 #### 关键扩展能力：
 
