--- a/src/data/blog/_posts/2025-06-asr流式模型的集成.md
+++ b/src/data/blog/_posts/2025-06-asr流式模型的集成.md
@@ -64,7 +64,7 @@ model_name: "iic/speech_paraformer-large_asr_nat-zh-cn-16k-common-vocab8404-onli
 
 ### 系统架构
 
-``mermaid
+```mermaid
 graph TB
     Client["客户端应用<br/>Client Application"] --> WS["WebSocket服务<br/>WebSocket Server"]
     WS --> ASR["流式ASR服务<br/>Streaming ASR Service"]
