feat: add html for 生蚝

--- a/src/data/blog/deep_research/2025-07-生蚝开闭壳.md
+++ b/src/data/blog/deep_research/2025-07-生蚝开闭壳.md
@@ -7,10 +7,25 @@ tags:
   - 科学
   - 烹饪
   - deep research
+  - 交互式
 draft: false
 featured: false
 author: DustyPosa
+htmlUrl: "/deep-research/%E7%94%9F%E8%9A%9D%E5%BC%80%E5%8F%A3.html"
 ---
+
+<div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 20px; border-radius: 12px; text-align: center; margin: 25px 0; box-shadow: 0 8px 32px rgba(102, 126, 234, 0.3);">
+  <h3 style="color: white; margin: 0 0 15px 0; font-size: 20px;">🎯 交互式学习体验</h3>
+  <p style="color: rgba(255,255,255,0.9); margin: 0 0 20px 0; font-size: 16px;">包含可视化图表、悬停提示、精简阅读</p>
+  <a href="/deep-research/%E7%94%9F%E8%9A%9D%E5%BC%80%E5%8F%A3.html" 
+     style="display: inline-block; padding: 14px 28px; background: rgba(255,255,255,0.2); color: white; text-decoration: none; border-radius: 8px; font-weight: 600; font-size: 16px; border: 2px solid rgba(255,255,255,0.3); transition: all 0.3s ease; backdrop-filter: blur(10px);"
+     target="_blank"
+     onmouseover="this.style.background='rgba(255,255,255,0.3)'; this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 20px rgba(0,0,0,0.2)'"
+     onmouseout="this.style.background='rgba(255,255,255,0.2)'; this.style.transform='translateY(0)'; this.style.boxShadow='none'">
+    🚀 立即开始懒人版阅读
+  </a>
+</div>
+
 # 未开口的生蚝：一个烹饪谜题的科学探究
 
 ## 引言：从厨房迷思到科学真相
